fix: invalid default value for URL in nextAuth api

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=9ba65b34c490fed75d81f80de39e21d7
 ALCHEMY_API_KEY=
