feat: shuffle nfts for the slideshow

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=9ba65b34c490fed75d81f80de39e21d7
-ALCHEMY_API_KEY=
+ALCHEMY_ETHEREUM_API_KEY=
+ALCHEMY_POLYGON_API_KEY=
 OPENSEA_API_KEY=
 PROVIDER_URL=https://cloudflare-eth.com
