--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rainbow-me/rainbowkit": "^1.0.5",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.2.0",
     "@types/node": "20.4.1",
+    "@types/ramda": "^0.29.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "alchemy-sdk": "^2.9.2",
@@ -28,6 +29,7 @@
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "opensea-js": "^6.1.3",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "siwe": "^2.1.4",
